<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TapNTab</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="privacy_policy"><u>Privacy &amp; Policy</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="hint_email">Email Address</string>
    <string name="username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="welcome_text">Welcome</string>
    <string name="back_text"> Back!</string>
    <string name="back_button_description"> Arrow pointing back</string>
    <string name="green_arrow_description">Up vote arrow</string>
    <string name="red_arrow_description">Down vote arrow</string>
    <string name="plus_button_desc">Plus button to start an order</string>
    <string name="dont_have_account">DON\'T HAVE ACCOUNT?</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="simplifying_bars">Simplifying Bars, One Tap at a Time</string>
    <string name="tapntab">TapNTab</string>
    <string name="notifications">Notifications</string>
    <string name="online_status">Online Status</string>
    <string name="change_password">Change Password</string>
    <string name="recent_tabs">Recent Tabs</string>
    <string name="back">BACK</string>
    <string name="profile">Profile</string>
    <string name="email_com">name@email.com</string>
    <string name="information">Information</string>
    <string name="general_settings">General Settings</string>
    <string name="payment">Payment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_an">Create an</string>
    <string name="account">Account!</string>
    <string name="remember_me">Remember me for 30 days</string>
    <string name="close_tab">CLOSE TAB</string>
    <string name="click_menu">Click the MENU to get started</string>
    <string name="last_updated">Last updated: 23:11</string>
    <string name="at_location">at BRATS, MADISON</string>
    <string name="menu">MENU</string>
    <string name="your_tab">Your Tab</string>
    <string name="update">Update</string>
    <string name="already_acc">Already have an account?</string>
    <string name="Sign_up_big">SIGN UP</string>
    <string name="logo_description">background logo</string>
    <string-array name="time_filter_options">
        <item>Last 24hrs</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>All time</item>
    </string-array>
    <string name="search_hint">Search</string>
    <string name="favorites_title">YOUR FAVORITES ❤️</string>
    <string name="most_popular_title">MOST POPULAR 🔥</string>

    <!-- Placeholder Strings for Bars -->
    <string name="brats_madison">Brats Madison</string>
    <string name="whiskey_jacks_saloon">Whiskey Jack\'s Saloon</string>
    <string name="dannys_pub">Danny\'s Pub</string>

    <!-- Icons and Descriptions -->
    <string name="votes_suffix"> votes</string>
    <string name="location_pin_description">Location pin icon</string>
    <string name="tnt_logo_description">TapNTap logo</string>
    <string name="search_icon_description">Search icon</string>
    <string name="fire_icon_description">Fire icon</string>
    <string name="bar_image">Bar image placeholder</string>
    <string name="nfc_reader_description">NFC reader image</string>
    <string name="hold_near_reader_prompt">Hold Near Reader To Get Started</string>

    <!-- Swipe-related Strings -->
    <string name="swipe_down_description">Swipe down to close tab</string>
    <string name="logo_description_swipe_down">Brats logo as background</string>
    <string name="thank_you_text">Thank you for visiting Brats, Madison</string>
    <string name="go_back_to_tab">GO BACK TO TAB</string>

    <!-- Error Messages -->
    <string name="error_email_invalid">Invalid email address</string>
    <string name="error_password_short">Password must be at least 6 characters</string>
    <string name="error_field_required">This field is required</string>

    <!-- Success Messages -->
    <string name="success_sign_up">Account created successfully</string>
    <string name="success_password_reset">Password reset link sent</string>

    <!-- Swipe Up Section -->
    <string name="swipe_up_description">Swipe up to open your tab</string>
    <string name="logo_description_swipe_up">Background logo for swipe up screen</string>

    <!-- Miscellaneous -->
    <string name="loading">Loading...</string>
    <string name="no_data">No data available</string>
    <string name="try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>