<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a0322"
    tools:context=".SignupActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="653dp"
        android:layout_height="221dp"
        app:srcCompat="@drawable/background_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-121dp"
        tools:layout_editor_absoluteY="-19dp" />


    <TextView
        android:id="@+id/CreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/create_an"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="#a9016d"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/CreateText"
        app:layout_constraintTop_toBottomOf="@id/CreateText" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CreateText"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:autofillHints="emailAddress"/>


    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        android:importantForAutofill="no"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/app_logo" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#740182"
        android:text="@string/Sign_up_big"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPass" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/dont_have_account"
        android:textColor="#888888"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:layout_editor_absoluteX="93dp"

        app:layout_constraintBaseline_toBaselineOf="@+id/signUpText"
        app:layout_constraintEnd_toStartOf="@+id/signUpText"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/dontHaveAccountText"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/dontHaveAccountText"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="@color/pink"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="858dp"
        app:layout_constraintStart_toStartOf="@id/dontHaveAccountText" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backButtonContainer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/arrowImage"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_description"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/backButtonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_logo1"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/backButtonText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arrowImage"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/signUpButton"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="831dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"/>

    <TextView
        android:id="@+id/alreadyAccountText22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:text="@string/dont_have_account"
        android:textColor="#888888"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/separator"
        app:layout_constraintEnd_toStartOf="@+id/signUpText"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alreadyAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_acc"
        android:textColor="#888888"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logInbuttonSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:id="@+id/logInbuttonSignup"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/dontHaveAccountText"
        android:layout_toEndOf="@id/dontHaveAccountText"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/log_in"
        android:layout_width="48dp"
        android:textColor="@color/pink"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/alreadyAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>
