<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#0a0322"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/app_logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/tapntab"
        android:textColor="#FFFFFF"
        android:textSize="85sp"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginTop="29dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/simplifying_bars"
        android:textColor="#BDBDBD"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="277dp"
        android:layout_height="87dp"
        android:layout_below="@id/subtitleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:backgroundTint="#740182"
        android:fontFamily="sans-serif-light"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="151dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/dont_have_account"
        android:textColor="#888888"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/dontHaveAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up_now"
        android:textColor="#FF4081"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>
